# AdvanceImageProcessing

./: CMakeLists.txt  DockerFile  main.cpp
Src/Common/: Defines.hpp
Src/Utilities/: ConsoleLogger.hpp
Src/View/: MainWindow.hpp
